yelb/deployment-redis-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  selector:
    matchLabels:
      app: redis-server
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-server
        tier: cache
        app.kubernetes.io/name: yelb
    spec:
      containers:
      - name: redis-server
        image: redis:4.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 10Mi
