yelb/deployment-yelb-appserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-appserver
  namespace: yelb
spec:
  selector:
    matchLabels:
      app: yelb-appserver
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
        app.kubernetes.io/name: "yelb"
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      containers:
      - name: yelb-appserver
        image: mreferre/yelb-appserver:0.5
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4567
        livenessProbe:
          httpGet:
            path: /api/getstats
            port: 4567
        readinessProbe:
          httpGet:
            path: /api/getstats
            port: 4567
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
