yelb/deployment-yelb-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
spec:
  selector:
    matchLabels:
      app: yelb-ui
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
        app.kubernetes.io/name: "yelb"
    spec:
      containers:
      - name: yelb-ui
        image: quay.io/fairwinds/yelb-ui:f38890ad009f4cda9ccfb030fa0fab4353e849fb
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
          limits:
            cpu: 100m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
